# FinGigaChat

./: .bot_runner.py.swp  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  article.xlsx  base_db.py  base_db_com.py  bot_logger.py  bot_runner.py  collect_users_statistics.py  config.py  corntab_fingigachat  database.py  db_conn_test.py  docker-compose.yaml  docker-composer.yaml  enums.py  main.py  main_article.py  main_article_online.py  main_quotes.py  main_research.py  main_researches.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  stat_getter.py
src/article/: README.md  config.py  main.py  pyproject.toml
src/article/configs/: config.py  prompts.py
src/article/data/assets/: user_agents.json
src/article/data/model/: client_binary_best2.pkl  multiclass_classification_best.pkl
src/article/data/name/: commodity_with_alternative_names.xlsx
src/article/db/: parser_source.py
src/article/log/: logger_base.py
src/article/module/: article_process.py  chatgpt.py  gigachat.py  mail_parse.py  model_pipe.py  utils.py
src/bert_client_relevance/: Dockerfile  README.md  app.py  config.py  pyproject.toml  ruRoberta.py
src/bot/: Dockerfile  README.md  alembic.ini  main.py  pyproject.toml  schedular.py
src/bot/configs/: config.py  config_manager.py  newsletter_config.py  prompts.py
src/bot/constants/: __init__.py  admin.py  aliases.py  commands.py  constants.py  enums.py  industry.py  quotes.py  subscriptions.py
src/bot/constants/analytics/: __init__.py  const.py
src/bot/constants/products/: __init__.py  const.py
src/bot/constants/quotes/: __init__.py  const.py
src/bot/constants/subscriptions/: __init__.py  const.py
src/bot/constants/texts/: __init__.py  texts.py  texts_manager.py
src/bot/data/assets/: companies_list.json
src/bot/data/name/: client_with_alternative_names.xlsx
src/bot/data/rating/: commodity_rating_system.xlsx
src/bot/db/: call_reports.py  client.py  database.py  industry.py  message.py  message_type.py  models.py  parser_source.py  rag_user_feedback.py  subscriptions.py  user.py  whitelist.py
src/bot/db/api/: base_crud.py  beneficiary.py  client.py  commodity.py  exc.py  industry.py  product.py  product_document.py  product_group.py  research.py  research_group.py  research_section.py  research_type.py  stakeholder.py  subject_interface.py  subscriptions_interface.py  telegram_channel.py  telegram_group.py  telegram_section.py  user_client_subscription.py  user_commodity_subscription.py  user_dialog_history.py  user_industry_subscription.py  user_research_subscription.py  user_telegram_subscription.py
src/bot/db/redis/: __init__.py  client.py  user_dialog.py
src/bot/db/web_app/: meeting.py
src/bot/handlers/: admin.py  call_reports.py  common.py  gigachat.py  industry.py  news.py  quotes.py  rag.py  referencebook.py  subscriptions.py
src/bot/handlers/admin/: __init__.py  handler.py
src/bot/handlers/ai/: __init__.py  (+1 more)
src/bot/keyboards/: base.py
src/bot/log/: bot_logger.py  logger_base.py  sentry.py
src/bot/middlewares/: db.py  logger.py  state.py
src/bot/migrations/: env.py
src/bot/module/: article_process.py  chatgpt.py  data_transformer.py  email_send.py  formatter.py  fuzzy_search.py  gigachat.py  mail_parse.py  model_pipe.py  text_splitter.py  weekly_pulse_parse.py
src/bot/utils/: base.py  data_crypto.py  decorators.py  handler_utils.py  industry.py  macro_view.py  message_limiter.py  newsletter.py  rag_router.py  sessions.py  telegram_news.py  watermark.py  weekly_pulse.py
src/parser_monitoring/: main.py  pyproject.toml
src/parser_monitoring/configs/: config.py
src/parser_monitoring/db/: database.py  parser_source.py
src/parser_monitoring/log/: logger_base.py
src/parser_monitoring/module/: auth.py  formatter.py  sender.py
src/parser_monitoring/schemas/: parser.py
src/projects/agent_app/: README.md  __init__.py  app.py  config.py  pyproject.toml
src/projects/article/: Dockerfile  main.py  pyproject.toml
src/projects/article_online/: README.md  article_online.rar  main.py  pyproject.toml
src/projects/bert_relevance/: Dockerfile  README.md  app.py  pyproject.toml  ruRoberta.py
src/projects/bot/: Dockerfile  alembic.ini  bot.py  main.py  pyproject.toml
src/projects/quotes/: Dockerfile  main.py  pyproject.toml
src/projects/research/: Dockerfile  main.py  pyproject.toml
src/projects/users_statistics/: pyproject.toml
src/projects/web_app/: Dockerfile  app.py  pyproject.toml
src/projects/web_retriever/: Dockerfile  format.py  pyproject.toml  retriever.py
src/quotes/: README.md  main.py  pyproject.toml
src/quotes/configs/: config.py
src/quotes/constants/: aliases.py  commands.py  constants.py  enums.py  gigaparsers.py  rules.py
src/quotes/db/: crud.py  database.py  models.py
src/quotes/log/: logger_base.py  sentry.py
src/quotes/module/: crawler.py  data_transformer.py  weekly_pulse_parse.py
src/quotes/utils/: __init__.py  base.py  cli_utils.py  common.py  run_async.py  selenium_utils.py
src/users_statistics/: main.py  pyproject.toml
src/users_statistics/configs/: config.py
src/users_statistics/log/: logger_base.py
src/users_statistics/module/: email_send.py  statistics.py  users_statistics.py
src/web_app/: .dockerignore  Dockerfile  app.py  config.py  main.py  pyproject.toml
src/web_app/api/: router.py
src/web_app/constants/: constants.py  quotes.py
src/web_app/db/: database.py  meeting.py  models.py  user.py
src/web_app/react_frontend/: README.md  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
src/web_app/tests/: conftest.py  test_app.py
src/web_app/utils/: __init__.py  bot.py  decorators.py  email_send.py  jwt.py  notification.py  parse_quotes.py  quote_view.py  quotes.py  quotes_update.py  telegram.py  utils.py
src/web_retriever/: Dockerfile  README.md  app.py  format.py  main.py  pyproject.toml  retriever.py
src/web_retriever/configs/: config.py  prompts.py  text_constants.py
src/web_retriever/evaluate/: config_evaluation.py  evaluation_utils.py  main.py
(+1539 files in other folders)
