[tool.poetry]
name = "users-statistics"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
accelerate = "^0.31.0"
aiogram = "^3.4.1"
aiohttp = "^3.9.3"
alembic = "^1.13.1"
apscheduler = "^3.10.4"
asyncpg = "^0.29.0"
beautifulsoup4 = "^4.12.3"
click = "^8.1.7"
docker = "^7.0.0"
environs = "^11.0.0"
fastapi = "^0.110.1"
fuzzywuzzy = "^0.18.0"
html5lib = "^1.1"
jinja2 = "^3.1.3"
lxml = "^5.1.0"
matplotlib = "^3.8.3"
numpy = "^1.26.4"
onnx = "^1.16.1"
onnxruntime = "^1.18.0"
openai = "^1.13.3"
openpyxl = "^3.1.2"
optimum = "^1.20.0"
pandas = "^2.2.1"
pdf2image = "^1.17.0"
pillow = "^10.3.0"
psycopg2 = "^2.9.9"
pydantic-settings = "^2.3.4"
pymorphy2 = "^0.9.1"
pymorphy3 = "^2.0.2"
pymupdf = "^1.23.26"
pysocks = "^1.7.1"
python-levenshtein = "^0.25.0"
redis = "^5.0.4"
requests = "^2.31.0"
schedule = "^1.2.1"
scikit-learn = "^1.4.1.post1"
selenium = "^4.18.1"
sentry-sdk = "^1.40.6"
setuptools = "^69.2.0"
soundfile = "^0.12.1"
speechrecognition = "^3.10.3"
sqlalchemy = "^2.0.28"
torch = "^2.3.1"
transformers = "^4.41.2"
typing-extensions = "^4.11.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
xgboost = "^2.0.3"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.1.0"
flake8 = "^7.0.0"
flake8-builtins = "^2.5.0"
flake8-docstrings = "^1.7.0"
flake8-import-order = "^0.18.2"
flake8-quotes = "^3.4.0"
isort = "^5.13.2"
mypy = "^1.9.0"
pylint = "^3.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
