[tool.poetry]
name = "global"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
accelerate = "^0.31.0"
aiogram = "^3.15.0"
aiohttp = "^3.10.11"
aiosmtplib = "^3.0.2"
alembic = "^1.14.0"
apscheduler = "^3.11.0"
asyncpg = "^0.29.0"
beautifulsoup4 = "^4.12.3"
click = "^8.1.7"
duckduckgo-search = "^6.3.7"
environs = "^11.2.1"
faker = "^28.4.1"
fastapi = "^0.110.3"
fuzzywuzzy = "^0.18.0"
gigachat = "^0.1.36"
html5lib = "^1.1"
httpx = "^0.28.1"
jinja2 = "^3.1.4"
langchain = "^0.3.11"
langchain-community = "^0.3.11"
langchain-gigachat = "^0.3.1"
langgraph = "^0.2.58"
lxml = "^5.3.0"
matplotlib = "^3.9.3"
numpy = "^1.26.4"
onnx = "^1.17.0"
onnxruntime = "^1.20.1"
openai = "^1.57.2"
openpyxl = "^3.1.5"
optimum = "^1.23.3"
pandas = "^2.2.3"
pdf2image = "^1.17.0"
pillow = "^10.4.0"
psycopg2 = "^2.9.10"
pydantic = "2.9.2"
pydantic-settings = "^2.6.1"
pyjwt = "^2.10.1"
pymorphy3 = "^2.0.2"
pymupdf = "^1.25.0"
pysocks = "^1.7.1"
python-dateutil = "^2.9.0.post0"
python-levenshtein = "^0.25.1"
redis = "^5.2.1"
requests = "^2.32.3"
schedule = "^1.2.2"
scikit-learn = "^1.6.0"
selenium = "^4.27.1"
sentry-sdk = "^1.45.1"
setuptools = "^69.5.1"
soundfile = "^0.12.1"
speechrecognition = "^3.12.0"
sqlalchemy = "^2.0.36"
tenacity = "^9.0.0"
torch = "^2.4.1"
transformers = "^4.47.0"
typing-extensions = "^4.12.2"
urllib3 = "^2.2.3"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
websockets = "^14.1"
xgboost = "^2.1.3"

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.3.1"
flake8 = "^7.1.1"
flake8-builtins = "^2.5.0"
flake8-docstrings = "^1.7.0"
flake8-import-order = "^0.18.2"
flake8-quotes = "^3.4.0"
isort = "^5.13.2"
mypy = "^1.13.0"
pylint = "^3.3.2"
pytest = "^8.3.4"
pytest-asyncio = "^0.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
