[tool.poetry]
name = "article"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
environs = "^11.0.0"
openai = "^1.13.3"
openpyxl = "^3.1.2"
pandas = "^2.2.1"
psycopg2 = "^2.9.9"
pymorphy2 = "^0.9.1"
requests = "^2.31.0"
scikit-learn = "^1.4.1.post1"
sentry-sdk = "^1.40.6"
sqlalchemy = "^2.0.28"
xgboost = "^2.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
