[tool.poetry]
name = "quotes"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^3.4.1"
click = "^8.1.7"
environs = "^11.0.0"
html5lib = "^1.1"
lxml = "^5.1.0"
matplotlib = "^3.8.3"
pandas = "^2.2.1"
psycopg2 = "^2.9.9"
pymupdf = "^1.23.26"
requests = "^2.31.0"
sentry-sdk = "^1.40.6"
sqlalchemy = "^2.0.28"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
