[tool.poetry]
name = "users-statistics"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
environs = "^11.0.0"
pandas = "^2.2.1"
psycopg2 = "^2.9.9"
schedule = "^1.2.1"
sqlalchemy = "^2.0.28"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
