[tool.poetry]
name = "web_retriever"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
asyncio = "^3.4.3"
duckduckgo_search = "5.3.0b4"
environs = "^10.3.0"
fastapi = "^0.110.1"
gigachat = "^0.1.35"
langchain = "^0.3.0"
langchain-community = "^0.3.0"
openpyxl = "^3.1.5"
pandas = "^2.2.3"
pydantic = "^2.9.2"
scikit-learn = "^1.5.2"
setuptools = "^69.2.0"
urllib3 = "^2.2.3"
uvicorn = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
