[tool.poetry]
name = "agent_app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
aiohttp = "^3.9.3"
asyncpg = "^0.29.0"
environs = "^10.3.0"
fuzzywuzzy = "^0.18.0"
gigachat = "^0.1.36"
langchain = "^0.3.8"
langchain-core = "^0.3.21"
langchain-gigachat = "^0.3.0"
langchain-openai = "^0.2.9"
langgraph = "^0.2.53"
openai = "^1.13.3"
pandas = "^2.2.1"
psycopg2 = "^2.9.9"
pydantic-settings = "^2.3.3"
python-levenshtein = "^0.25.0"
redis = "^5.0.4"
requests = "^2.31.0"
sqlalchemy = "^2.0.28"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
