[tool.poetry]
name = "article"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
beautifulsoup4 = "^4.12.3"
environs = "^11.2.1"
fuzzywuzzy = "^0.18.0"
openai = "^1.57.2"
openpyxl = "^3.1.5"
pandas = "^2.2.3"
psycopg2 = "^2.9.10"
pymorphy3 = "^2.0.2"
pysocks = "^1.7.1"
python-levenshtein = "^0.25.1"
requests = "^2.32.3"
scikit-learn = "^1.6.0"
sentry-sdk = "^1.45.1"
sqlalchemy = "^2.0.36"
xgboost = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
