[tool.poetry]
name = "bert_client_relevance"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
accelerate = "^0.31.0"
environs = "^11.2.1"
fastapi = "^0.110.3"
numpy = "^1.26.4"
onnx = "^1.17.0"
onnxruntime = "^1.20.1"
optimum = "^1.23.3"
Pillow = "^10.4.0"
setuptools = "^69.5.1"
torch = "^2.4.1"
transformers = "^4.47.0"
uvicorn = "^0.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
