[tool.poetry]
name = "bot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.15.0"
aiohttp = "^3.10.11"
alembic = "^1.14.0"
apscheduler = "^3.10.4"
asyncpg = "^0.29.0"
environs = "^11.2.1"
fuzzywuzzy = "^0.18.0"
gigachat = "^0.1.36"
langchain = "^0.3.11"
langchain-community = "^0.3.11"
langchain-gigachat = "^0.3.1"
langgraph = "^0.2.58"
matplotlib = "^3.9.3"
openai = "^1.57.2"
openpyxl = "^3.1.5"
pandas = "^2.2.3"
psycopg2 = "^2.9.10"
pydantic-settings = "^2.6.1"
pymorphy3 = "^2.0.2"
pymupdf = "^1.25.0"
pysocks = "^1.7.1"
python-levenshtein = "^0.25.1"
redis = "^5.2.1"
requests = "^2.32.3"
scikit-learn = "^1.6.0"
sentry-sdk = "^1.45.1"
soundfile = "^0.12.1"
speechrecognition = "^3.12.0"
sqlalchemy = "^2.0.36"
xgboost = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
