[tool.poetry]
name = "quotes"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
apscheduler = "^3.10.4"
asyncpg = "^0.29.0"
aiogram = "^3.4.1"
beautifulsoup4 = "^4.12.3"
environs = "^11.0.0"
html5lib = "^1.1"
lxml = "^5.1.0"
matplotlib = "^3.8.3"
pandas = "^2.2.1"
psycopg2 = "^2.9.9"
pymupdf = "^1.23.26"
pysocks = "^1.7.1"
requests = "^2.31.0"
selenium = "^4.18.1"
sentry-sdk = "^1.40.6"
sqlalchemy = "^2.0.28"
websockets = "^12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
