[tool.poetry]
name = "research"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^3.4.1"
asyncpg = "^0.29.0"
beautifulsoup4 = "^4.12.3"
docker = "^7.0.0"
environs = "^11.0.0"
lxml = "^5.1.0"
matplotlib = "^3.8.3"
numpy = "^1.26.4"
pandas = "^2.2.1"
pdf2image = "^1.17.0"
psycopg2 = "^2.9.9"
pymupdf = "^1.23.26"
pysocks = "^1.7.1"
requests = "^2.31.0"
schedule = "^1.2.1"
selenium = "^4.18.1"
sentry-sdk = "^1.40.6"
sqlalchemy = "^2.0.28"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
