[tool.poetry]
name = "research"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.15.0"
asyncpg = "^0.29.0"
beautifulsoup4 = "^4.12.3"
environs = "^11.2.1"
lxml = "^5.3.0"
matplotlib = "^3.9.3"
numpy = "^1.26.4"
pandas = "^2.2.3"
pdf2image = "^1.17.0"
psycopg2 = "^2.9.10"
pymupdf = "^1.25.0"
pysocks = "^1.7.1"
requests = "^2.32.3"
schedule = "^1.2.2"
selenium = "^4.27.1"
sentry-sdk = "^1.45.1"
sqlalchemy = "^2.0.36"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
