[tool.poetry]
name = "users-statistics"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
environs = "^11.2.1"
openpyxl = "^3.1.5"
pandas = "^2.2.3"
psycopg2 = "^2.9.10"
schedule = "^1.2.2"
sqlalchemy = "^2.0.36"
typing-extensions = "^4.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
