[tool.poetry]
name = "web_app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.15.0"
aiosmtplib = "^3.0.2"
apscheduler = "^3.11.0"
asyncpg = "^0.29.0"
environs = "^11.2.1"
faker = "^28.4.1"
fastapi = "^0.110.3"
httpx = "^0.28.1"
jinja2 = "^3.1.4"
psycopg2 = "^2.9.10"
pyjwt = "^2.10.1"
pytest = "^8.3.4"
pytest-asyncio = "^0.24.0"
python-dateutil = "^2.9.0.post0"
redis = "^5.2.1"
setuptools = "^69.5.1"
sqlalchemy = "^2.0.36"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
pyjwt = "2.9.0"
redis = "^5.1.1"
aiosmtplib = "^3.0.2"
python-multipart = "^0.0.17"
aiofiles = "^24.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
