[tool.poetry]
name = "web_app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.4.1"
apscheduler = "^3.10.4"
asyncpg = "^0.29.0"
environs = "^10.3.0"
faker = "^28.0.0"
fastapi = "^0.110.1"
httpx = "^0.27.0"
jinja2 = "^3.1.3"
psycopg2 = "^2.9.9"
pytest = "^8.3.2"
pytest-asyncio = "^0.24.0"
python-dateutil = "^2.9.0.post0"
setuptools = "^69.2.0"
sqlalchemy = "^2.0.28"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
pyjwt = "2.9.0"
redis = "^5.1.1"
aiosmtplib = "^3.0.2"
python-multipart = "^0.0.17"
aiofiles = "^24.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"