[tool.poetry]
name = "web_app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
aiofiles = "^24.1.0"
aiogram = "^3.15.0"
aiosmtplib = "^3.0.2"
apscheduler = "^3.11.0"
asyncpg = "^0.29.0"
marshmallow = '>=3,<4'
environs = "^10.3.0"
faker = "^28.0.0"
fastapi = "^0.110.1"
httpx = "^0.27.0"
jinja2 = "^3.1.3"
psycopg2 = "^2.9.9"
pyjwt = "2.9.0"
pytest = "^8.3.2"
pytest-asyncio = "^0.24.0"
python-dateutil = "^2.9.0.post0"
python-multipart = "^0.0.17"
redis = "^5.2.1"
setuptools = "^69.5.1"
sqlalchemy = "^2.0.36"
uvicorn = {extras = ["standard"], version = "^0.29.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
