[tool.poetry]
name = "web_retriever"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
duckduckgo-search = "^6.3.7"
environs = "^11.2.1"
fastapi = "^0.110.3"
gigachat = "^0.1.36"
langchain = "^0.3.11"
langchain-community = "^0.3.11"
openpyxl = "^3.1.5"
pandas = "^2.2.3"
pydantic = "^2.9.2"
scikit-learn = "^1.6.0"
setuptools = "^69.5.1"
urllib3 = "^2.2.3"
uvicorn = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
